# ClergySexAbuse

./: .gitignore  .mcp.json  CLAUDE.md  SETUP_INSTRUCTIONS.md  pyproject.toml  run_server.py  setup.sh  start_mcp.py
.claude/commands/: compare.md  cross-reference-source.md  extract-from-narrative.md  find-anomalies.md  generate-map.md  generate-network-graph.md  generate-report.md  generate-timeline.md  investigate-diocese.md  natural-experiment.md  research.md  test-hypothesis.md  update.md
docs/: architecture.md  executive_brief.docx  executive_brief.md  methodology.md  skills_guide.docx  ~$ecutive_brief.docx
scripts/: import_existing.py  scrape_anderson.py  scrape_santa_fe.py
src/backend/: config.py  database.py  main.py  models.py
src/backend/routes/: analytics.py  clergy.py  consequences.py  crossref.py  documents.py  export.py
src/mcp_server/: __main__.py  server.py
src/pipeline/: normalizer.py
src/pipeline/importers/: anderson_json.py  anderson_national.py  ba_json.py  consequences.py  facilities.py  santa_fe.py
src/pipeline/scrapers/: anderson.py  santa_fe.py
