[project]
name = "clergy-abuse-data"
version = "0.1.0"
description = "Unified clergy sex abuse data platform for academic research"
requires-python = ">=3.11"
dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Data processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    # Scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # RAG
    "fastembed>=0.5.0",
    "numpy>=2.0.0",
    "anthropic>=0.43.0",
    # PDF processing
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.0.0",
    # MCP server
    "mcp>=1.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
